Avoid sub-pixel flickering due to 3d CSS rendering

--- a/app/styles/Insets2dTrack.module.scss
+++ b/app/styles/Insets2dTrack.module.scss
@@ -19,6 +19,7 @@
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.5),
               0 2px 6px 0 rgba(0, 0, 0, 0.33),
               0 2px 9px 0 rgba(0, 0, 0, 0.2);
+  transform: translateZ(0);
   transition: transform $normal $ease,
               width $fast $ease,
               height $fast $ease,
@@ -238,6 +239,7 @@
   background-position: center center;
   background-repeat: no-repeat;
   animation: fade-in $fast $ease;
+  transform: translateZ(0);
 }
 
 .inset-cluster-size {
